--- a/api_conf.d/app_api_node.conf
+++ b/api_conf.d/app_api_node.conf
@@ -1,11 +1,12 @@
 # API definition
 location /showUsers{ 
     set $upstream service1_backend;
-    rewrite ^/showUsers/(.*)$ /getUsers/$1 permanent;
+    rewrite ^/showUsers/(.*)$ /_getUsers/$1 permanent;
 }
 
 # Policy section
-location = /getUsers {
+location = /_getUsers {
+    internal;
     set $api_name "api_nodeapp";
     # Policy configuration here (authentication, rate limiting, logging, more...)
     proxy_pass http://$upstream$request_uri;
