--- a/api_conf.d/app_api_checkkeys.conf
+++ b/api_conf.d/app_api_checkkeys.conf
@@ -3,13 +3,14 @@
  location  /showUsers{
      limit_except GET POST {}
      set $upstream service1_backend;
-     rewrite ^/showUsers/(.*)$ /getUsers/$1 permanent;
+     rewrite ^/showUsers/(.*)$ /_getUsers/$1 permanent;
  }
 
 # Policy section
 #
- location = /getUsers {
-
+ location = /_getUsers {
+     internal;
+     
      set $api_name "api_nodeapp";  
 
      if ($http_apikey = "") {
