--- a/api_backends.conf
+++ b/api_backends.conf
@@ -6,12 +6,14 @@ upstream service1_backend {
 }
 
 # upstream service2_backend {
+#     zone service2_backend 64k;
 #     server service2_backend1;
 #     server service2_backend2;
 #     server service2_backend3;
 # }
 
 # upstream service3_backend {
+#     zone service3_backend 64k;
 #     server service3_backend1;
 #     server service3_backend2;
 #     server service3_backend3;
