--- a/api_conf.d/app_api_node.conf
+++ b/api_conf.d/app_api_node.conf
@@ -1,7 +1,7 @@
 # API definition
 location /showUsers{ 
     set $upstream service1_backend;
-    rewrite ^/showUsers/(.*)$ /_getUsers/$1 permanent;
+    rewrite ^/showUsers/(.*)$ /_getUsers$1 last;
 }
 
 # Policy section
