--- a/api_conf.d/app_api_checkkeys.conf
+++ b/api_conf.d/app_api_checkkeys.conf
@@ -3,7 +3,7 @@
  location  /showUsers{
      limit_except GET POST {}
      set $upstream service1_backend;
-     rewrite ^/showUsers/(.*)$ /_getUsers/$1 permanent;
+     rewrite ^ /_getUsers last;
  }
 
 # Policy section
